# microrust

./: Cargo.toml  README.md
.cargo/: config.toml
src/: blinking-rotate.rs  blinking.rs  delaying.rs  uarte-echo-server.rs  uarte-receive-single-byte.rs  uarte-reverse-string-server.rs  uarte-send-a-string.rs  uarte-send-single-byte.rs
